syntax = "proto3";

package appointment;

import "google/protobuf/timestamp.proto";

message Customer {
    string id = 1; 
    string Prefix = 2;
    string FirstName = 3;
    string LastName = 4;
    string Mobile = 5;
    string Email = 6;
    string Gender = 7;
    google.protobuf.Timestamp BirthDate = 8;
    string DisplayPicture = 9;
    string Address = 10;
    bool InAppUser = 11;
    bool IsActive = 12;
  }

message CustomerCreateModel {
    string Prefix = 1;
    string FirstName = 2;
    string LastName = 3;
    string Mobile = 4;
    string Email = 5;
    string Gender = 6;
    google.protobuf.Timestamp BirthDate = 7;
    string DisplayPicture = 8;
    string Address = 9;
    bool InAppUser = 10;
    bool IsActive = 11;
}

message CustomerGetByIdModel {
    string id = 1; 
}

message CustomerGetByIdResponse {
    string id = 1; 
    string Prefix = 2;
    string FirstName = 3;
    string LastName = 4;
    string Mobile = 5;
    string Email = 6;
    string Gender = 7;
    google.protobuf.Timestamp BirthDate = 8;
    string DisplayPicture = 9;
    string Address = 10;
    bool InAppUser = 11;
    bool IsActive = 12; 
}

message CustomerCreateResponse {
    string id = 1; 
    string Prefix = 2;
    string FirstName = 3;
    string LastName = 4;
    string Mobile = 5;
    string Email = 6;
    string Gender = 7;
    google.protobuf.Timestamp BirthDate = 8;
    string DisplayPicture = 9;
    string Address = 10;
    bool InAppUser = 11;
    bool IsActive = 12;
}

message CustomerUpdateModel {
    string id = 1; 
    string Prefix = 2;
    string FirstName = 3;
    string LastName = 4;
    string Mobile = 5;
    string Email = 6;
    string Gender = 7;
    google.protobuf.Timestamp BirthDate = 8;
    string DisplayPicture = 9;
    string Address = 10;
    bool InAppUser = 11;
    bool IsActive = 12;
}

message CustomerUpdateResponse {
    string id = 1; 
    string Prefix = 2;
    string FirstName = 3;
    string LastName = 4;
    string Mobile = 5;
    string Email = 6;
    string Gender = 7;
    google.protobuf.Timestamp BirthDate = 8;
    string DisplayPicture = 9;
    string Address = 10;
    bool InAppUser = 11;
    bool IsActive = 12;
}

message CustomerSearchModel {
    string firstname = 1;
    string LastName = 2;
    string Mobile = 3;
    string email = 4;
    string name = 5;
}

message CustomerSearchResponse {
    string id = 1; 
    string Prefix = 2;
    string FirstName = 3;
    string LastName = 4;
    string Mobile = 5;
    string Email = 6;
    string Gender = 7;
    google.protobuf.Timestamp BirthDate = 8;
    string DisplayPicture = 9;
    string Address = 10;
    bool InAppUser = 11;
    bool IsActive = 12;
}

message CustomerDeleteModel {
    string id = 1;
}

  message CustomerDeleteResponse {
    string id = 1;
}


service Customers {
    rpc Create(CustomerCreateModel) returns (CustomerCreateResponse);
    rpc GetById(CustomerGetByIdModel) returns (CustomerGetByIdResponse) {};
    rpc Search(CustomerSearchModel) returns (CustomerSearchResponse) {};
    rpc Update(CustomerUpdateModel) returns (CustomerUpdateResponse) {};
    rpc Delete(CustomerDeleteModel) returns (CustomerDeleteResponse) {};

}